is-libzip-sys/src/bindings.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_stat {
    pub valid: zip_uint64_t,
    pub name: *const ::std::os::raw::c_char,
    pub index: zip_uint64_t,
    pub size: zip_uint64_t,
    pub comp_size: zip_uint64_t,
    pub mtime: time_t,
    pub crc: zip_uint32_t,
    pub comp_method: zip_uint16_t,
    pub encryption_method: zip_uint16_t,
    pub flags: zip_uint32_t,
}
#[test]
fn bindgen_test_layout_zip_stat() {
    assert_eq!(
        ::std::mem::size_of::<zip_stat>(),
        64usize,
        concat!("Size of: ", stringify!(zip_stat))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_stat>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_stat))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).valid as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(valid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).name as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).index as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).size as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).comp_size as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(comp_size)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).mtime as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(mtime)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).crc as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(crc)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).comp_method as *const _ as usize },
        52usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(comp_method)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).encryption_method as *const _ as usize },
        54usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(encryption_method)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_stat>())).flags as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_stat),
            "::",
            stringify!(flags)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_buffer_fragment {
    pub data: *mut zip_uint8_t,
    pub length: zip_uint64_t,
}
#[test]
fn bindgen_test_layout_zip_buffer_fragment() {
    assert_eq!(
        ::std::mem::size_of::<zip_buffer_fragment>(),
        16usize,
        concat!("Size of: ", stringify!(zip_buffer_fragment))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_buffer_fragment>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_buffer_fragment))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_buffer_fragment>())).data as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_buffer_fragment),
            "::",
            stringify!(data)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_buffer_fragment>())).length as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_buffer_fragment),
            "::",
            stringify!(length)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_file_attributes {
    pub valid: zip_uint64_t,
    pub version: zip_uint8_t,
    pub host_system: zip_uint8_t,
    pub ascii: zip_uint8_t,
    pub version_needed: zip_uint8_t,
    pub external_file_attributes: zip_uint32_t,
    pub general_purpose_bit_flags: zip_uint16_t,
    pub general_purpose_bit_mask: zip_uint16_t,
}
#[test]
fn bindgen_test_layout_zip_file_attributes() {
    assert_eq!(
        ::std::mem::size_of::<zip_file_attributes>(),
        24usize,
        concat!("Size of: ", stringify!(zip_file_attributes))
    );
    assert_eq!(
        ::std::mem::align_of::<zip_file_attributes>(),
        8usize,
        concat!("Alignment of ", stringify!(zip_file_attributes))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).valid as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(valid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).version as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(version)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).host_system as *const _ as usize },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(host_system)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zip_file_attributes>())).ascii as *const _ as usize },
        10usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(ascii)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).version_needed as *const _ as usize
        },
        11usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(version_needed)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).external_file_attributes as *const _
                as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(external_file_attributes)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).general_purpose_bit_flags as *const _
                as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(general_purpose_bit_flags)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<zip_file_attributes>())).general_purpose_bit_mask as *const _
                as usize
        },
        18usize,
        concat!(
            "Offset of field: ",
            stringify!(zip_file_attributes),
            "::",
            stringify!(general_purpose_bit_mask)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_file {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zip_source {
    _unused: [u8; 0],
}
pub type zip_t = zip;
pub type zip_error_t = zip_error;
pub type zip_file_t = zip_file;
pub type zip_file_attributes_t = zip_file_attributes;
pub type zip_source_t = zip_source;
pub type zip_stat_t = zip_stat;
pub type zip_buffer_fragment_t = zip_buffer_fragment;
pub type zip_flags_t = zip_uint32_t;
pub type zip_source_callback = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut ::std::os::raw::c_void,
        arg2: *mut ::std::os::raw::c_void,
        arg3: zip_uint64_t,
        arg4: zip_source_cmd_t,
    ) -> zip_int64_t,
>;
pub type zip_progress_callback = ::std::option::Option<
    unsafe extern "C" fn(arg1: *mut zip_t, arg2: f64, arg3: *mut ::std::os::raw::c_void),
>;
pub type zip_cancel_callback = ::std::option::Option<
    unsafe extern "C" fn(
        arg1: *mut zip_t,
        arg2: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int,
>;
pub type zip_progress_callback_t = ::std::option::Option<unsafe extern "C" fn(arg1: f64)>;
extern "C" {
    pub fn zip_register_progress_callback(arg1: *mut zip_t, arg2: zip_progress_callback_t);
}
extern "C" {
    pub fn zip_add(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: *mut zip_source_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_add_dir(arg1: *mut zip_t, arg2: *const ::std::os::raw::c_char) -> zip_int64_t;
}
extern "C" {
    pub fn zip_get_file_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn zip_get_num_files(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_rename(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_replace(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *mut zip_source_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_set_file_comment(
        arg1: *mut zip_t,
        arg2: zip_uint64_t,
        arg3: *const ::std::os::raw::c_char,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_get_sys_type(arg1: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_get(
        arg1: *mut zip_t,
        arg2: *mut ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn zip_error_to_str(
        arg1: *mut ::std::os::raw::c_char,
        arg2: zip_uint64_t,
        arg3: ::std::os::raw::c_int,
        arg4: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_file_error_get(
        arg1: *mut zip_file_t,
        arg2: *mut ::std::os::raw::c_int,
        arg3: *mut ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn zip_close(arg1: *mut zip_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_delete(arg1: *mut zip_t, arg2: zip_uint64_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_dir_add(
        arg1: *mut zip_t,
        arg2: *const ::std::os::raw::c_char,
        arg3: zip_flags_t,
    ) -> zip_int64_t;
}
extern "C" {
    pub fn zip_discard(arg1: *mut zip_t);
}
extern "C" {
    pub fn zip_get_error(arg1: *mut zip_t) -> *mut zip_error_t;
}
extern "C" {
    pub fn zip_error_clear(arg1: *mut zip_t);
}
extern "C" {
    pub fn zip_error_code_zip(arg1: *const zip_error_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_code_system(arg1: *const zip_error_t) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn zip_error_fini(arg1: *mut zip_error_t);
}
extern "C" {
    pub fn zip_error_init(arg1: *mut zip_error_t);
}
extern "C" {
    pub fn zip_error_init_with_code(arg1: *mut zip_error_t, arg2: ::std::os::raw::c_int);
}
